# artifacts/api-server/src/routes/index.ts
@@ -8,8 +8,6 @@ import aiRouter from "./ai";
 import dashboardRouter from "./dashboard";
 import profileRouter from "./profile";
 import conversationsRouter from "./conversations";
-import meaterRouter from "./meater";
-import thermoworksRouter from "./thermoworks";
 import contactRouter from "./contact";
 import paywallRouter from "./paywall";
 import webhooksRouter from "./webhooks";
@@ -33,8 +31,6 @@ router.use(aiRouter);
 router.use(dashboardRouter);
 router.use(profileRouter);
 router.use(conversationsRouter);
-router.use(meaterRouter);
-router.use(thermoworksRouter);
 router.use(contactRouter);
 router.use(paywallRouter);
 router.use(webhooksRouter);
